# The-brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  rules.py
brain_games/games/: brain_calc.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
